--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
 }
 
@@ -53,4 +56,25 @@ dependencies {
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+    // use this version number for coroutines-play-services (most recent is 1.6.0, but we are
+    // intentionally using version 1.1.1)
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+
+    // firebase
+    implementation platform('com.google.firebase:firebase-bom:29.2.1')
+    // firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    // by view models
+    def activity_version = "1.4.0"
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    // needed for asLiveData() function
+    def lifecycle_version = "2.5.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    // Declare the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
