--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,16 +65,20 @@ dependencies {
     // firestore
     implementation 'com.google.firebase:firebase-firestore-ktx'
     // by view models
-    def activity_version = "1.4.0"
-    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.activity:activity-ktx:1.4.0"
     // needed for asLiveData() function
-    def lifecycle_version = "2.5.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha05"
     // hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
-
+// CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:1.1.0-beta02"
+// CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:1.1.0-beta02"
+// CameraX View class
+    implementation "androidx.camera:camera-view:1.1.0-beta02"
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
+
 }
