--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,12 +71,13 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+    def camerax_version = "1.0.0-beta12"
 // CameraX core library using camera2 implementation
-    implementation "androidx.camera:camera-camera2:1.1.0-beta02"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
 // CameraX Lifecycle Library
-    implementation "androidx.camera:camera-lifecycle:1.1.0-beta02"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
 // CameraX View class
-    implementation "androidx.camera:camera-view:1.1.0-beta02"
+    implementation "androidx.camera:camera-view:1.0.0-alpha19"
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
