Added a data class to be a conversion to a kotlin variable from a colour API response

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'androidx.palette:palette:1.0.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0"
 }
